--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Yummy Bootstrap Template</title>
+  <title>Trang Chủ</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -159,14 +159,15 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-secondary" href="#">Deals</a>
+        <a class="nav-link text-secondary" href="#">Đơn hàng</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link text-secondary" href="#">Spring home ideas</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-secondary" href="#">Home accessories</a>
-      </li>
+      </li>-->
     </ul>
   </div>
 
@@ -178,11 +179,11 @@
       <div class="container">
         <div class="row gy-4 justify-content-center justify-content-lg-between">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">EM IU ANH HONG?</h1>
+            <h1 data-aos="fade-up">NỘI THẤT NÂNG TẦM SỐNG</h1>
 <!--            <p data-aos="fade-up" data-aos-delay="100">EM IU ANH HONG? </p>-->
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-              <a href="#book-a-table" class="btn-get-started">Booka a Table</a>
-              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+              <a href="#book-a-table" class="btn-get-started">Sản phẩm</a>
+              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Xem Video</span></a>
             </div>
           </div>
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
@@ -198,8 +199,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About Us<br></h2>
-        <p><span>Learn More</span> <span class="description-title">About Us</span></p>
+        <h2>Liên hệ<br></h2>
+        <p><span>Xem thêm</span> <span class="description-title">Liên hệ</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -208,7 +209,7 @@
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about.jpg" class="img-fluid mb-4" alt="">
             <div class="book-a-table">
-              <h3>Book a Table</h3>
+              <h3>Đặt hàng</h3>
               <p>+1 5589 55488 55</p>
             </div>
           </div>
@@ -249,7 +250,7 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="why-box">
-              <h3>Why Choose Yummy</h3>
+              <h3>Lý do lựa chọn</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
                 Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
