--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title th:fragment="title">Index - Yummy Bootstrap Template</title>
+    <title th:fragment="title">Sản phẩm</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
