--- a/src/main/resources/templates/register-page.html
+++ b/src/main/resources/templates/register-page.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title th:fragment="title">Come join us</title>
+    <title th:fragment="title">Đăng ký</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
